--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "chroma-js": "^1.4.0",
     "invert-color": "^1.5.0",
+    "konva": "^2.4.2",
+    "lodash.has": "^4.5.2",
+    "lodash.hasin": "^4.5.2",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isobject": "^3.0.2",
     "react": "^16.5.2",
+    "react-canvas-component": "^0.1.5",
     "react-dom": "^16.5.2",
+    "react-konva": "^16.5.2",
     "react-scripts": "2.0.4",
+    "rebass": "^3.0.0-9",
     "styled-components": "^3.4.10"
   },
   "scripts": {
