--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.2.0",
-    "@material-ui/icons": "^3.0.1",
     "chroma-js": "^1.4.0",
     "eq.js": "^1.9.0",
     "invert-color": "^1.5.0",
@@ -14,6 +12,7 @@
     "lodash.isarray": "^4.0.0",
     "lodash.isobject": "^3.0.2",
     "react": "^16.5.2",
+    "react-burger-menu": "^2.5.4",
     "react-canvas-component": "^0.1.5",
     "react-dom": "^16.5.2",
     "react-element-query": "^3.0.3",
