--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-element-query": "^3.0.3",
     "react-konva": "^16.5.2",
     "react-responsive": "^5.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "rebass": "^3.0.0-9",
     "styled-components": "^3.4.10"
