--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-responsive": "^6.0.1",
     "rebass": "^3.0.0-11",
     "styled-components": "^4.1.1"
   },
