--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-sass": "^2.0.4",
     "gatsby-plugin-sharp": "^2.0.7",
-    "gatsby-source-filesystem": "^2.0.4",
+    "gatsby-source-filesystem": "^2.0.9",
     "gatsby-transformer-sharp": "^2.1.4",
     "node-sass": "^4.10.0",
     "react": "^16.5.1",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.2.2",
     "react-responsive": "^6.0.1",
     "rebass": "^3.0.0-11",
     "styled-components": "^4.1.1"
