--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-filesystem": "^2.0.9",
     "gatsby-transformer-sharp": "^2.1.4",
     "node-sass": "^4.10.0",
+    "polished": "^2.3.1",
     "react": "^16.5.1",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.5.1",
