--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "polished": "^2.3.1",
     "react": "^16.5.1",
     "react-burger-menu": "^2.5.4",
+    "react-custom-share": "^0.4.8",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
+    "react-icons-kit": "^1.2.1",
     "react-responsive": "^6.0.1",
     "rebass": "^3.0.0-11",
     "styled-components": "^4.1.1"
