--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.9.2",
     "chroma-js": "^1.4.0",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
@@ -13,6 +14,7 @@
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-sass": "^2.0.4",
     "gatsby-plugin-sharp": "^2.0.7",
+    "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-source-filesystem": "^2.0.9",
     "gatsby-transformer-sharp": "^2.1.4",
     "node-sass": "^4.10.0",
@@ -25,7 +27,7 @@
     "react-icons-kit": "^1.2.1",
     "react-responsive": "^6.0.1",
     "rebass": "^3.0.0-11",
-    "styled-components": "^4.1.1"
+    "styled-components": "^4.1.2"
   },
   "keywords": [
     "gatsby"
