--- a/package.json
+++ b/package.json
@@ -4,31 +4,31 @@
   "version": "1.0.0",
   "author": "April Gray <aprgray5@gmail.com>",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.9.2",
-    "chroma-js": "^1.4.0",
-    "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.11",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-react-svg": "^2.0.0",
-    "gatsby-plugin-sass": "^2.0.4",
-    "gatsby-plugin-sharp": "^2.0.7",
-    "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-source-filesystem": "^2.0.9",
-    "gatsby-transformer-sharp": "^2.1.4",
-    "node-sass": "^4.10.0",
-    "polished": "^2.3.1",
-    "react": "^16.5.1",
-    "react-burger-menu": "^2.5.4",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.2.2",
-    "react-icons-kit": "^1.2.1",
-    "react-responsive": "^6.0.1",
+    "babel-plugin-styled-components": "^1.10.0",
+    "chroma-js": "^1.4.1",
+    "gatsby": "^2.8.2",
+    "gatsby-image": "^2.1.2",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-offline": "^2.1.1",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-react-svg": "^2.1.1",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-sharp": "^2.1.21",
+    "node-sass": "^4.12.0",
+    "polished": "^2.3.3",
+    "react": "^16.8.6",
+    "react-burger-menu": "^2.6.10",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
+    "react-icons-kit": "^1.3.1",
+    "react-responsive": "^6.1.2",
     "react-sizes": "^1.0.4",
-    "rebass": "^3.0.0-11",
-    "styled-components": "^4.1.2"
+    "rebass": "^3.1.1",
+    "styled-components": "^4.2.1"
   },
   "keywords": [
     "gatsby"
@@ -41,10 +41,12 @@
     "serve": "gatsby build && gatsby serve",
     "server": "npm run serve",
     "format": "prettier --write \"src/**/*.js\"",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.17.1"
   },
   "repository": {
     "type": "git",
