--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "serve": "gatsby build && gatsby serve",
     "server": "npm run serve",
     "format": "prettier --write \"src/**/*.js\"",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build --prefix-paths && gh-pages -b master -d public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
