--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.38",
     "gatsby-transformer-sharp": "^2.1.21",
+    "is-url-external": "^1.0.3",
     "node-sass": "^4.12.0",
     "polished": "^2.3.3",
     "react": "^16.8.6",
-    "react-burger-menu": "^2.6.10",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
