--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.38",
     "gatsby-transformer-sharp": "^2.1.21",
+    "highlight.js": "^9.17.1",
     "is-url-external": "^1.0.3",
     "node-sass": "^4.12.0",
     "polished": "^2.3.3",
