--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
+    "@storybook/addon-knobs": "^5.3.2",
+    "@storybook/addon-storysource": "^5.3.2",
+    "@types/react": "^16.9.17",
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.10.6",
     "chroma-js": "^1.4.1",
+    "extended-proptypes": "^1.3.0",
     "gatsby": "^2.18.18",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-manifest": "^2.2.34",
@@ -19,18 +23,22 @@
     "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-plugin-transition-link": "^1.17.7",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-sharp": "^2.3.9",
+    "gsap": "^3.0.5",
     "highlight.js": "^9.17.1",
     "is-url-external": "^1.0.3",
     "node-sass": "^4.13.0",
     "polished": "^2.3.3",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-icons-kit": "^1.3.1",
+    "react-pose": "^4.0.10",
     "react-responsive": "^6.1.2",
     "react-sizes": "^1.0.4",
     "rebass": "^3.2.2",
@@ -48,9 +56,17 @@
     "server": "npm run serve",
     "format": "prettier --write \"src/**/*.js\"",
     "deploy": "gatsby build --prefix-paths && gh-pages -b master -d public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@storybook/addon-actions": "^5.3.2",
+    "@storybook/addon-console": "^1.2.1",
+    "@storybook/addon-links": "^5.3.2",
+    "@storybook/react": "^5.3.2",
+    "babel-loader": "^8.0.6",
     "gh-pages": "^2.2.0",
     "prettier": "^1.19.1"
   },
