--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@material-ui/icons": "^4.5.1",
     "@storybook/addon-knobs": "^5.3.2",
     "@storybook/addon-storysource": "^5.3.2",
-    "@types/react": "^16.9.17",
+    "@types/material-ui": "^0.21.7",
+    "@types/react": "^16.9.19",
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.10.6",
     "chroma-js": "^1.4.1",
@@ -42,6 +43,7 @@
     "react-responsive": "^6.1.2",
     "react-sizes": "^1.0.4",
     "rebass": "^3.2.2",
+    "storybook": "^5.3.13",
     "styled-components": "^4.4.1"
   },
   "keywords": [
@@ -68,7 +70,8 @@
     "@storybook/react": "^5.3.2",
     "babel-loader": "^8.0.6",
     "gh-pages": "^2.2.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.5"
   },
   "repository": {
     "type": "git",
