--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "@types/styled-components": "^4.4.3",
     "animejs": "^3.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "chroma-js": "^1.4.1",
@@ -19,6 +20,7 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-typescript": "^2.1.27",
     "gatsby-source-filesystem": "^2.0.38",
     "gatsby-transformer-sharp": "^2.1.21",
     "is-url-external": "^1.0.3",
@@ -47,11 +49,17 @@
     "server": "npm run serve",
     "format": "prettier --write \"src/**/*.js\"",
     "deploy": "gatsby build --prefix-paths && gh-pages -b master -d public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "gh-pages": "^2.0.1",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5"
   },
   "repository": {
     "type": "git",
