--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@storybook/addon-storysource": "^5.3.2",
     "@types/material-ui": "^0.21.7",
     "@types/react": "^16.9.19",
+    "@types/styled-components": "^4.4.3",
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.10.6",
     "chroma-js": "^1.4.1",
     "extended-proptypes": "^1.3.0",
+    "firebase": "^7.8.2",
     "gatsby": "^2.18.18",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-manifest": "^2.2.34",
@@ -59,19 +61,7 @@
     "format": "prettier --write \"src/**/*.js\"",
     "deploy": "gatsby build --prefix-paths && gh-pages -b master -d public",
     "test": "echo \"Error: no test specified\" && exit 1",
-<<<<<<< HEAD
     "type-check": "tsc --noEmit"
-  },
-  "devDependencies": {
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "gh-pages": "^2.0.1",
-    "prettier": "^1.17.1",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.2.1",
-=======
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -80,9 +70,9 @@
     "@storybook/addon-links": "^5.3.2",
     "@storybook/react": "^5.3.2",
     "babel-loader": "^8.0.6",
+    "gatsby-plugin-typescript": "^2.1.27",
     "gh-pages": "^2.2.0",
     "prettier": "^1.19.1",
->>>>>>> 77c406e08cb45b5a9a9f20ae3e55e23363194581
     "typescript": "^3.7.5"
   },
   "repository": {
