--- a/package.json
+++ b/package.json
@@ -42,11 +42,15 @@
     "react-icons": "^3.8.0",
     "react-icons-kit": "^1.3.1",
     "react-pose": "^4.0.10",
+    "react-redux": "^7.1.3",
     "react-responsive": "^6.1.2",
     "react-sizes": "^1.0.4",
     "rebass": "^3.2.2",
+    "redux": "^4.0.5",
+    "reduxsauce": "^1.1.2",
     "storybook": "^5.3.13",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "timm": "^1.6.2"
   },
   "keywords": [
     "gatsby"
