--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@storybook/addon-storysource": "^5.3.2",
     "@types/material-ui": "^0.21.7",
     "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^4.4.3",
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.10.6",
@@ -36,11 +37,13 @@
     "polished": "^2.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-awesome-slider": "^4.1.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-icons-kit": "^1.3.1",
+    "react-photo-gallery": "^8.0.0",
     "react-pose": "^4.0.10",
     "react-responsive": "^6.1.2",
     "react-sizes": "^1.0.4",
